Add Payment and Register

--- a/Areas/Management/Views/PreModule/WorkerIndex.cshtml
+++ b/Areas/Management/Views/PreModule/WorkerIndex.cshtml
@@ -41,7 +41,7 @@
 
                         <td class="float-right">
                             <div class="btn-group" role="group" aria-label="Basic example">
-                                <a asp-action="EditSupplier" asp-route-id="@items.WorkerId" type="button" class="btn btn-warning">Edit</a>
+                                @*<a asp-action="EditSupplier" asp-route-id="@items.WorkerId" type="button" class="btn btn-warning">Edit</a>*@
                                 <button class="btn btn-danger stitchdetails" type="button"
                                         data-assigned-id="@items.WorkerId" data-text="@items.WorkerName">
                                     Delete
