--- a/Areas/Management/Views/Work/WorkIndex.cshtml
+++ b/Areas/Management/Views/Work/WorkIndex.cshtml
@@ -23,6 +23,7 @@
                         <th>Product</th>
                         <th>Worker</th>
                         <th>EDD</th>
+                        <th>Action</th>
 
 
                     </tr>
@@ -54,6 +55,7 @@
                         <th>Product</th>
                         <th>Worker</th>
                         <th>EDD</th>
+                        <th>Action</th>
                     </tr>
                 </tfoot>
             </table>
