--- a/Areas/Management/Views/Inventory/InventoryCreate.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryCreate.cshtml
@@ -89,13 +89,13 @@
                         </div>
                         <span asp-validation-for="SupplierId" class="text-danger"></span>
                     </div>
-                    <div class="col-md-6">
+                    @*<div class="col-md-6">
                         <div class="form-group">
                             <label for="exampleInputPassword1">Remaining Quantity</label>
                             <input type="text" class="form-control" id="remainqty" readonly placeholder="Remaining Quantity" asp-for="RemainingQty">
                         </div>
                         <span asp-validation-for="RemainingQty" class="text-danger"></span>
-                    </div>
+                    </div>*@
                 </div>
                 <!-- /.card-body -->
                 <div class="row">
