--- a/Areas/Management/Views/Work/WorkCreate.cshtml
+++ b/Areas/Management/Views/Work/WorkCreate.cshtml
@@ -47,7 +47,7 @@
                         <div class="form-group">
                             <label for="WorkType">Worke Type</label>
                             <select class="form-control select2" style="width: 100%;" data-native-menu="false" id="WorkType" asp-for="WorkType"
-                                    asp-items="@(new SelectList(ViewBag.worketype, "CostMapId","OperationType"))">
+                                    asp-items="@(new SelectList(ViewBag.worketype, "CostMapId","Costtittle"))">
                                 <option selected="selected">Select One</option>
                             </select>
                         </div>
