--- a/Areas/Management/Views/Inventory/ProductIndex.cshtml
+++ b/Areas/Management/Views/Inventory/ProductIndex.cshtml
@@ -37,6 +37,7 @@
                             <div class="btn-group" role="group" aria-label="Basic example">
                                 <a asp-action="EditProduct" asp-route-id="@items.Id" type="button" class="btn btn-warning">Edit</a>
                                 <a asp-action="ProductDetails" asp-route-id="@items.Id" type="button" class="btn btn-info">Details</a>
+                                <a asp-action="ProductManage" asp-route-id="@items.Id" type="button" class="btn btn-info">Manage</a>
 
                             </div>
 
