--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -272,6 +272,15 @@
                                         </p>
                                     </a>
                                 </li>
+
+                                <li class="nav-item">
+                                    <a asp-area="Management" asp-controller="Work" asp-action="CompleteWorkIndex" class="nav-link">
+                                        <i class="fas fa-angle-double-right"></i>
+                                        <p>
+                                            Complete Work Schedule
+                                        </p>
+                                    </a>
+                                </li>
                                 @*<li class="nav-item">
 
 
