--- a/Areas/Management/Views/Work/CompleteWorkIndex.cshtml
+++ b/Areas/Management/Views/Work/CompleteWorkIndex.cshtml
@@ -10,10 +10,8 @@
 <body>
 
     <div class="card">
-
-        <a asp-action="WorkCreate" class=" btn btn-primary float-right">Create New</a>
         <div class="card-header">
-            <h2 class=" text-center">Pending Work</h2>
+            <h2 class=" text-center" >Completed Work</h2>
         </div>
         <!-- /.card-header -->
         <div class="card-body">
@@ -24,8 +22,6 @@
                         <th>AsignDate</th>
                         <th>Works</th>
                         <th>Product</th>
-                        <th>Worker</th>
-                        <th>EDD</th>
                         <th>Quantity</th>
                         <th>Action</th>
 
@@ -36,17 +32,14 @@
                     @foreach (var items in Model)
                     {
                         <tr>
+
                             <td>@items.WorkAsignDate</td>
                             <td>@items.WorkType</td>
                             <td>@items.Product</td>
-                            <td>@items.Worker</td>
-                            <td>@items.EDD</td>
                             <td>@items.Quantity</td>
                             <td class="float-right">
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-warning">Details</a>
-                                    <a asp-action="WorkManage" asp-route-id="@items.WorkId" type="button" class="btn btn-info">Manage</a>
-
                                 </div>
 
 
@@ -61,8 +54,6 @@
                         <th>AsignDate</th>
                         <th>Works</th>
                         <th>Product</th>
-                        <th>Worker</th>
-                        <th>EDD</th>
                         <th>Quantity</th>
                         <th>Action</th>
                     </tr>
@@ -74,29 +65,29 @@
 
 
 
-@section Scripts {
-    <script src="~/assets/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- DataTables  & Plugins -->
-    <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/jszip/jszip.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/assets/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <!-- Page specific script -->
+    @section Scripts {
+        <script src="~/assets/plugins/jquery/jquery.min.js"></script>
+        <!-- Bootstrap 4 -->
+        <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- DataTables  & Plugins -->
+        <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+        <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/jszip/jszip.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+        <!-- AdminLTE App -->
+        <script src="~/assets/dist/js/adminlte.min.js"></script>
+        <!-- AdminLTE for demo purposes -->
+        <!-- Page specific script -->
 
-    <script>
+        <script>
         $(function () {
             $('.stitchdetails').click(function () {
                 var Styleid = $(this).data('assigned-id');
@@ -117,15 +108,15 @@
             });
 
         });
-    </script>
-    <script>
+        </script>
+        <script>
             $(function () {
                 $("#example1").DataTable({
                     "responsive": true, "lengthChange": false, "autoWidth": false,
                     "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
                 }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
             });
-    </script>
-}
+        </script>
+    }
 </body>
 </html>
