--- a/Areas/Management/Views/Work/CompleteWorkIndex.cshtml
+++ b/Areas/Management/Views/Work/CompleteWorkIndex.cshtml
@@ -33,7 +33,7 @@
                     {
                         <tr>
 
-                            <td>@items.WorkAsignDate</td>
+                            <td>@items.WorkAsignDate.ToShortDateString()</td>
                             <td>@items.WorkType</td>
                             <td>@items.Product</td>
                             <td>@items.Quantity</td>
