--- a/Areas/Management/Views/Inventory/InventoryOutIndex.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryOutIndex.cshtml
@@ -24,6 +24,7 @@
                         <th>Product Tittle</th>
                         <th>Per Product Inventory Quantity</th>
                         <th>Worker</th>
+                        <th>Action</th>
 
 
                     </tr>
@@ -58,6 +59,7 @@
                         <th>Product Tittle</th>
                         <th>Per Product Inventory Quantity</th>
                         <th>Worker</th>
+                        <th>Action</th>
                     </tr>
                 </tfoot>
             </table>
