--- a/Areas/Management/Views/Inventory/DetailsInventory.cshtml
+++ b/Areas/Management/Views/Inventory/DetailsInventory.cshtml
@@ -46,9 +46,9 @@
         </div>
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header text-info h5">Consumptions</div>
-                <div class="card-body">
-                    <table class="table">
+                <div class="card-header bg-red text-info h5">Consumptions</div>
+                <div class="card-body p-0">
+                    <table class="table table-dark">
                         <thead>
                             <tr>
                                 <th>Date</th>
