--- a/wwwroot/mycss/login.css
+++ b/wwwroot/mycss/login.css
@@ -2,9 +2,9 @@
 
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
-html, body {
-    background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
-    background-size: cover;
+html,body {
+    background-image: url('https://getwallpapers.com/wallpaper/full/1/8/2/74758.jpg');
+    background-size: 100%;
     background-repeat: no-repeat;
     height: 100%;
     font-family: 'Numans', sans-serif;
